integrate plan wise data in admin dashboard

--- a/apache-ofbiz-16.11.05/hot-deploy/admin/webapp/admin/static/css/admin-main.css
+++ b/apache-ofbiz-16.11.05/hot-deploy/admin/webapp/admin/static/css/admin-main.css
@@ -317,3 +317,8 @@ table.table .avatar {
 .p_eye {
   cursor: pointer;
 }
+
+.progress-bar-style{
+  aria-valuenow:"25";
+  aria-valuemin:"0"; aria-valuemax:"100";
+}
