--- a/apache-ofbiz-16.11.05/hot-deploy/portal/webapp/portal/static/css/portal-main.css
+++ b/apache-ofbiz-16.11.05/hot-deploy/portal/webapp/portal/static/css/portal-main.css
@@ -166,6 +166,8 @@ table.table .avatar {
   background-color: #763965    ;
   overflow-x: hidden;
   padding-top: 20px;
+  padding-left: 50px;
+  /*margin-right: 50px;*/
 }
 .login-main {
   padding: 0px 10px;
@@ -190,9 +192,13 @@ table.table .avatar {
     margin-top: 40%;
   }
 }
+.login-logo{
+  padding-top: 10px;
+}
 .login-main-text{
-  margin-top: 20%;
-  padding: 60px;
+  /*margin-top: */
+  padding-top: 80px;
+  padding-right: 20px;
   color: #fff;
 }
 .login-main-text h2{
