--- a/apache-ofbiz-16.11.05/hot-deploy/portal/webapp/portal/static/css/portal-main.css
+++ b/apache-ofbiz-16.11.05/hot-deploy/portal/webapp/portal/static/css/portal-main.css
@@ -26,7 +26,7 @@ a:hover {
 }
 
 #sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
+ /* padding: 0.875rem 1.25rem; */
   font-size: 1.2rem;
 }
 
